--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -72,4 +72,4 @@ Questions included on the survey were: The approximate phonological form of the 
  \subsection{Data processing}
 Data were handled similarly to Datasets 1 and 2. 
 
-
+\end{document}
